# Platepal

./: platepal.db  pyproject.toml
app/: config.py  database.py  dependencies.py  main.py  router.py
app/api/v1/endpoints/: auth.py  user.py
app/config/: database.py  env_config.py  redis.py
app/core/: security.py  utils.py
app/enums/: dish_categories.py  user_type.py
app/models/: business.py  menu.py  user.py
app/repositories/: base_repository.py  user_repository.py
app/schemas/: auth_schema.py  menu_schema.py  responses_schema.py  token_schema.py  user_schema.py
app/services/: auth_service.py  email_service.py  notification_service.py
app/templates/: forgot_password_mail.html  welcome_mail.html
migrations/: env.py
migrations/versions/: a1b1158c8c61_added_email_verified_and_email_token_to_.py
